Add jpa repositories and services